# rust-tdd-rest-api

./: .env  Cargo.toml
.github/workflows/: pipeline.yaml
.sqlx/: query-1c3c3f5df3debf438d0a781070f873cd66ccf78491e8b0ad4416b456026715af.json  query-1c91630f0bb1fa272adad073d9a749a891cd22077b45781519cf97c3e86fca29.json  query-42ece46c2be0bfff4986fb07197060e5dbcfc3d63ba9952736ab9d0b742ba78e.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-cd7c0fe0664f29fee2fcd8e3a2acf2da455aa8a6d235575b1f2ac66a4511251d.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
src/: main.rs
src/application/dtos/auth/: sign_in_dto.rs  sign_up_dto.rs
src/application/ports/auth/: auth_port.rs  sign_up_repository.rs  sign_up_repository_port.rs
src/application/ports/database/: database_port.rs  user_database_port.rs
src/application/ports/environment/: environment_port.rs
src/application/ports/hasher/: hasher_port.rs
src/application/ports/id_generator/: id_generator_port.rs
src/application/ports/logger/: logger_port.rs
src/application/ports/logger_subscriber/: logger_subsriber_port.rs
src/application/ports/pattern_matching/: pattern_matching_port.rs
src/application/ports/repositories/: sign_in_repository_port.rs  sign_up_repository_port.rs
src/application/ports/tcp_server/: tcp_server_port.rs
src/application/ports/validator/: validator_port.rs
src/application/ports/web_framework/: web_framework_port.rs
src/application/use_cases/auth/: sign_in_use_case.rs  sign_up_use_case.rs
src/application/use_cases/user/: create_user_use_case.rs  get_user_by_email_use_case.rs  get_user_by_id_use_case.rs
src/domain/entities/user/: user_entity.rs
src/domain/errors/user/: user_errors.rs
(+54 files in other folders)
