[package]
name = "rust-tdd-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.1"
dotenvy = "0.15.7"
mockall = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
axum = "0.8.4"
serde = "1.0.225"
serde_json = "1.0.145"
