[package]
name = "rust-tdd-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.1"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
axum = "0.8.4"
serde = "1.0.225"
serde_json = "1.0.145"
regex = "1.11.2"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
] }

[dev-dependencies]
mockall = "0.13.1"
