[package]
name = "rust-tdd-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.1"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
axum = "0.8.4"
serde = "1.0.225"
serde_json = "1.0.145"
regex = "1.11.2"
jsonwebtoken = "9.3.1"
tower = "0.5.2"
tower-helmet = "0.3.0"
tower_governor = "0.8.0"
tower-http = { version = "0.6.6", features = ["cors", "trace", "set-header"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
time = { version = "0.3.44", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "time",
] }

[dev-dependencies]
mockall = "0.13.1"

[package.metadata.llvm-cov]
ignore = ["src/infrastructure/adapters/*"]